# audio-analyzer

./: .gitignore  README.md  pyproject.toml
audio_analyzer/: __main__.py  utils.py
audio_analyzer/download_vosk/: __main__.py
audio_analyzer/manipulation/: __init__.py
audio_analyzer/search/: __init__.py
